# Auction-website

./: Auction_webscraping.py  Resnet50.ipynb  S3_Image_Upload_Script.py  auctionApi.py  image_rating.py  package.json  recc.py  recc_redis.py
blockchain API and worker/: .env.example  app.js  package.json  server.js
datasets/: Clothing-Shoes-and-Accessories.csv  Coins-and-Paper-Money.csv  Collectibles.csv  Jewelry-and-Watches (1).csv  Jewelry-and-Watches.csv  Musical-Instruments-and-Gear.csv  Sporting-Goods.csv  Sports-Mem-Cards-and-Fan-Shop.csv  Toys-and-Hobbies.csv  Video-Games-and-Consoles.csv  coins-and-paper-money.csv  collectibles.csv  jewelry-and-watches.csv  musical-instruments-and-gear.csv  sporting-goods.csv  sports-mem,-cards-and-fan-shop.csv  video-games-and-consoles.csv
docker/: docker-compose.yml
frontend/: package-lock.json  package.json
home-mock/: index.js  package.json
rating/: .gitignore  rating.py  requirements.txt
server/: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json  server.js
server/abi/: ItemManagement.json
server/models/: Operation.js
server/redis/: client.js
server/services/: contractService.js
server/src/: awss3.rs  config.rs  elasticsearch.rs  lib.rs  main.rs  mongo.rs  redis.rs  types.rs
server/src/handlers/: autocomplete_item.rs  delete_item.rs  get_category_items.rs  get_home_page.rs  get_item.rs  get_operation_status.rs  get_top_categories.rs  get_user_items.rs  health_check.rs  mod.rs  place_bid.rs  post_item.rs  search_item.rs  transfer_item.rs
server/worker/: itemOperationWorker.js
(+73 files in other folders)
